CREATE TABLE semesters (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, code VARCHAR(20) NOT NULL UNIQUE, name VARCHAR(100) NOT NULL, start_date DATE NOT NULL, end_date DATE NOT NULL, status VARCHAR(20) NOT NULL, CHECK(end_date>=start_date)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE time_slots (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, name VARCHAR(50) NOT NULL UNIQUE, start_time TIME NOT NULL, end_time TIME NOT NULL, sort_order INT NOT NULL UNIQUE, CHECK(end_time>start_time)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE courses (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, department_id BIGINT UNSIGNED NOT NULL, code VARCHAR(20) NOT NULL UNIQUE, name VARCHAR(160) NOT NULL, credits TINYINT UNSIGNED NOT NULL, required_room_type VARCHAR(30) NOT NULL, status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE', FOREIGN KEY(department_id) REFERENCES departments(id), CHECK(credits BETWEEN 1 AND 10)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE course_sections (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, course_id BIGINT UNSIGNED NOT NULL, semester_id BIGINT UNSIGNED NOT NULL, code VARCHAR(30) NOT NULL UNIQUE, capacity INT UNSIGNED NOT NULL, student_count INT UNSIGNED NOT NULL DEFAULT 0, status VARCHAR(20) NOT NULL, created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, FOREIGN KEY(course_id) REFERENCES courses(id), FOREIGN KEY(semester_id) REFERENCES semesters(id), CHECK(capacity>0), CHECK(student_count<=capacity), CHECK(status IN ('UNSCHEDULED','SCHEDULED','CONFLICTED','CLOSED','CANCELLED'))) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE lecturer_assignments (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, course_section_id BIGINT UNSIGNED NOT NULL, lecturer_id BIGINT UNSIGNED NOT NULL, assigned_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, UNIQUE(course_section_id,lecturer_id), UNIQUE(id,course_section_id), FOREIGN KEY(course_section_id) REFERENCES course_sections(id), FOREIGN KEY(lecturer_id) REFERENCES users(id)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE student_enrollments (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, course_section_id BIGINT UNSIGNED NOT NULL, student_id BIGINT UNSIGNED NOT NULL, enrolled_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE', UNIQUE(course_section_id,student_id), FOREIGN KEY(course_section_id) REFERENCES course_sections(id), FOREIGN KEY(student_id) REFERENCES users(id), CHECK(status IN ('ACTIVE','CANCELLED'))) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
