CREATE TABLE classrooms (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, code VARCHAR(20) NOT NULL UNIQUE, name VARCHAR(100) NOT NULL, building VARCHAR(80) NOT NULL, floor INT UNSIGNED NOT NULL, capacity INT UNSIGNED NOT NULL, room_type VARCHAR(30) NOT NULL, status VARCHAR(20) NOT NULL, description VARCHAR(500), CHECK(capacity>0), CHECK(status IN ('AVAILABLE','IN_USE','MAINTENANCE','INACTIVE'))) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE equipment (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, code VARCHAR(30) NOT NULL UNIQUE, name VARCHAR(120) NOT NULL, category VARCHAR(50) NOT NULL, status VARCHAR(20) NOT NULL) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE classroom_equipment (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, classroom_id BIGINT UNSIGNED NOT NULL, equipment_id BIGINT UNSIGNED NOT NULL, quantity INT UNSIGNED NOT NULL, condition_status VARCHAR(20) NOT NULL, condition_note VARCHAR(255), updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP, UNIQUE(classroom_id,equipment_id), FOREIGN KEY(classroom_id) REFERENCES classrooms(id), FOREIGN KEY(equipment_id) REFERENCES equipment(id), CHECK(condition_status IN ('GOOD','DAMAGED','MAINTENANCE','UNAVAILABLE'))) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
