CREATE TABLE change_requests (
 id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, requester_id BIGINT UNSIGNED NOT NULL, schedule_id BIGINT UNSIGNED,
 requested_room_id BIGINT UNSIGNED, requested_equipment_id BIGINT UNSIGNED, requested_date DATE, requested_day TINYINT UNSIGNED,
 requested_start_slot_id BIGINT UNSIGNED, requested_end_slot_id BIGINT UNSIGNED, equipment_name VARCHAR(120), quantity INT UNSIGNED,
 request_type VARCHAR(30) NOT NULL, reason TEXT NOT NULL, priority VARCHAR(20) NOT NULL, status VARCHAR(20) NOT NULL,
 reviewed_by BIGINT UNSIGNED, review_reason TEXT, reviewed_at DATETIME, created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
 FOREIGN KEY(requester_id) REFERENCES users(id), FOREIGN KEY(schedule_id) REFERENCES schedules(id), FOREIGN KEY(requested_room_id) REFERENCES classrooms(id),
 FOREIGN KEY(requested_equipment_id) REFERENCES equipment(id), FOREIGN KEY(requested_start_slot_id) REFERENCES time_slots(id), FOREIGN KEY(requested_end_slot_id) REFERENCES time_slots(id), FOREIGN KEY(reviewed_by) REFERENCES users(id),
 CHECK(request_type IN ('CHANGE_SCHEDULE','CHANGE_ROOM','BORROW_EQUIPMENT','REPORT_DAMAGE','USE_ROOM')), CHECK(status IN ('PENDING','APPROVED','REJECTED','CANCELLED')), CHECK(requested_day IS NULL OR requested_day BETWEEN 2 AND 8)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE notifications (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, user_id BIGINT UNSIGNED NOT NULL, title VARCHAR(180) NOT NULL, content TEXT NOT NULL, type VARCHAR(30) NOT NULL, reference_type VARCHAR(50), reference_id BIGINT UNSIGNED, target_screen VARCHAR(50), is_read BOOLEAN NOT NULL DEFAULT FALSE, created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, read_at DATETIME, FOREIGN KEY(user_id) REFERENCES users(id)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE audit_logs (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, user_id BIGINT UNSIGNED, action VARCHAR(80) NOT NULL, entity_type VARCHAR(60) NOT NULL, entity_id BIGINT UNSIGNED, details JSON, created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, FOREIGN KEY(user_id) REFERENCES users(id) ON DELETE SET NULL) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
CREATE TABLE maintenance_records (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, classroom_id BIGINT UNSIGNED, classroom_equipment_id BIGINT UNSIGNED, reported_by BIGINT UNSIGNED NOT NULL, description TEXT NOT NULL, start_date DATE NOT NULL, end_date DATE, status VARCHAR(20) NOT NULL, created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, FOREIGN KEY(classroom_id) REFERENCES classrooms(id), FOREIGN KEY(classroom_equipment_id) REFERENCES classroom_equipment(id), FOREIGN KEY(reported_by) REFERENCES users(id), CHECK(classroom_id IS NOT NULL OR classroom_equipment_id IS NOT NULL), CHECK(end_date IS NULL OR end_date>=start_date), CHECK(status IN ('REPORTED','IN_PROGRESS','COMPLETED','CANCELLED'))) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
